--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -24,7 +24,7 @@ RUN set -ex; \
 		libpng-dev \
 	; \
 	\
-	docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr; \
+	docker-php-ext-configure gd; \
 	docker-php-ext-install gd mysqli opcache; \
 	\
 	runDeps="$( \
